--- a/src/client/styles/app.scss
+++ b/src/client/styles/app.scss
@@ -1,4 +1,14 @@
-.app {
-    color: red;
-    text-transform: uppercase;
+@import './footer.scss';
+@import './header.scss';
+@import './main.scss';
+
+html, body {
+    height: 100%;
+    background-color: #333;
+}
+
+body {
+    color: #fff;
+    text-shadow: 0 0.05rem 0.1rem rgba(0, 0, 0, .5);
+    box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5);
 }
