feat: Include textarea for news article input section

--- a/src/client/styles/app.scss
+++ b/src/client/styles/app.scss
@@ -1,6 +1,4 @@
-@import './footer.scss';
-@import './header.scss';
-@import './main.scss';
+@import './section.scss';
 
 html, body {
     height: 100%;
@@ -9,6 +7,5 @@ html, body {
 
 body {
     color: #fff;
-    text-shadow: 0 0.05rem 0.1rem rgba(0, 0, 0, .5);
     box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5);
 }
