--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="en" dir="ltr">
 
 <head>
+    <meta charset="utf-8">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
         integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
 </head>
@@ -15,7 +16,7 @@
                 <textarea class="section__input-textarea" id="news-article"></textarea>
             </div>
             <div class="section__footer">
-                <button class="btn btn-success h-100 w-100">Evaluate</button>
+                <button id="news-submit" class="btn btn-success h-100 w-100">Evaluate</button>
             </div>
         </section>
         <section class="d-flex flex-column section section--inverted">
