--- a/src/client/styles/app.scss
+++ b/src/client/styles/app.scss
@@ -1,11 +1,14 @@
 @import './section.scss';
+@import './card.scss';
 
-html, body {
-    height: 100%;
-    background-color: #333;
+html,
+body {
+  background-color: #333;
+  height: 100%;
 }
 
 body {
-    color: #fff;
-    box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5);
+  box-shadow: inset 0 0 5rem rgba(0, 0, 0, 0.5);
+  color: #fff;
+  overflow: hidden;
 }
