docs: Update README to include 'Getting Started'

--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8" />
-    <link rel="shortcut icon" href="" />
+    <link rel="shortcut icon" href="#" />
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
